--- a/TestProject/appsettings.json
+++ b/TestProject/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "User ID=postgres;Password=123456;Host=localhost;Database=dddd;Port=5432;"
+  }
 }
