--- a/TestProject/appsettings.json
+++ b/TestProject/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "User ID=postgres;Password=123456;Host=localhost;Database=dddd;Port=5432;"
+    "Default": "User ID=postgres;Password=123456;Host=localhost;Database=ddddd;Port=5432;"
   }
 }
