Polly for catch errors.

--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="7.0.9" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="7.0.11" />
+    <PackageReference Include="Polly" Version="8.1.0" />
   </ItemGroup>
 
 </Project>
