--- a/TestProject/appsettings.json
+++ b/TestProject/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "User ID=postgres;Password=1;Host=localhost;Database=test;Port=5432;"
+    "Default": "User ID=postgres;Password=1;Host=localhost;Database=testda;Port=5432;"
   }
 }
