--- a/TestProject/appsettings.json
+++ b/TestProject/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "User ID=postgres;Password=1;Host=localhost;Database=test;Port=5432;"
+  },
+  "VATSettings": {
+    "VATPercentage": 0.2
   }
 }
