--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="Polly" Version="8.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
+    <PackageReference Include="Microsoft.OpenApi" Version="1.6.10" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Remove="Views\AuditView\Index.cshtml" />
