--- a/TestProject/appsettings.json
+++ b/TestProject/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "User ID=postgres;Password=1;Host=localhost;Database=aaaaa;Port=5432;"
+    "Default": "User ID=postgres;Password=1;Host=localhost;Database=default;Port=5432;"
   },
   "VATSettings": {
     "VATPercentage": 0.2
