not found page added

--- a/TestProject/TestProject.csproj
+++ b/TestProject/TestProject.csproj
@@ -40,4 +40,10 @@
     <UpToDateCheckInput Remove="Views\Home\Main.cshtml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Views\NotFoundPage\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Views\NotFoundPage\" />
+  </ItemGroup>
 </Project>
